--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "moment": "^2.22.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-spinkit": "^1.1.1"
+    "react-native-spinkit": "^1.1.1",
+    "react-native-iber-calendars": "latest"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
